# android-ptrace-injector

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
include/: app.h  inject.h  ptrace.h  utils.h
src/: inject.c  main.c  ptrace.c  utils.c
